--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,29 +1,35 @@
 {
   "name": "splitit-typescript-sdk",
   "version": "1.0.2",
-  "description": "SDK for Splitit REST API",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "repository": "https://github.com/konfig-dev/splitit-sdks/tree/main/typescript",
-  "homepage": "https://github.com/konfig-dev/splitit-sdks/tree/main/typescript",
-  "author": "splitit.com",
-  "license": "MIT",
+  "description": "Client for splitit-web-api-v3",
+  "author": "Konfig",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/konfig-dev/splitit-sdks/tree/main/typescript"
+  },
+  "keywords": [
+    "axios",
+    "typescript",
+    "konfig",
+    "splitit-typescript-sdk"
+  ],
+  "license": "Unlicense",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && tsc -p tsconfig.build.json",
-    "release": "npm run build && npm publish",
-    "clean": "rm -rf dist/",
+    "build": "tsc ",
+    "prepare": "npm run build",
     "test": "jest"
   },
+  "dependencies": {
+    "axios": "^0.26.1"
+  },
   "devDependencies": {
-    "@types/jest": "^29.2.3",
-    "@types/node-fetch": "^2.6.2",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^12.11.5",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7"
+    "typescript": "^4.0"
   }
 }
