move logo up to top-level and configure logoPath

--- a/konfig.yaml
+++ b/konfig.yaml
@@ -33,6 +33,7 @@ generators:
     version: 1.0.4
     packageName: Splitit.Net
     outputDirectory: csharp
+    logoPath: logo.png
     git:
       userId: konfig-dev
       repoId: splitit-sdks/tree/main/csharp
