--- a/konfig.yaml
+++ b/konfig.yaml
@@ -1,4 +1,4 @@
-outputDirectory: /tmp/splitit-sdks-out
+outputDirectory: /tmp/splitit-web-sdks-out
 specPath: swagger.json
 requiredEnvironmentVariables:
   - SPLITIT_CLIENT_ID
@@ -13,54 +13,54 @@ generators:
     test:
       script:
         - yarn test
-    version: 1.0.5
+    version: 1.0.6
     outputDirectory: typescript
-    npmName: splitit-typescript-sdk
+    npmName: splitit-web-typescript-sdk
     git:
       userId: konfig-dev
-      repoId: splitit-sdks/tree/main/typescript
+      repoId: splitit-web-sdks/tree/main/typescript
   python:
-    version: 1.0.0
+    version: 1.0.1
     test:
       script:
         - tox
     packageName: splitit_client
-    projectName: splitit-python-sdk
+    projectName: splitit-web-python-sdk
     outputDirectory: python
     git:
       userId: konfig-dev
-      repoId: splitit-sdks/tree/main/python
+      repoId: splitit-web-sdks/tree/main/python
   java:
     test:
       script:
         - mvn test
-    version: 1.0.2
+    version: 1.0.3
     groupId: com.konfigthis
     packageName: splitit
-    artifactId: splitit-java-sdk
+    artifactId: splitit-web-java-sdk
     outputDirectory: java
     git:
       userId: konfig-dev
-      repoId: splitit-sdks/tree/main/java
+      repoId: splitit-web-sdks/tree/main/java
   csharp:
     test:
       script:
         - dotnet test
-    version: 1.0.7
+    version: 1.0.8
     packageName: Splitit.Net
     outputDirectory: csharp
     logoPath: logo.png
     git:
       userId: konfig-dev
-      repoId: splitit-sdks/tree/main/csharp
+      repoId: splitit-web-sdks/tree/main/csharp
   go:
     test:
       script:
         - go clean -testcache
         - go test ./...
-    version: 1.0.1
+    version: 1.0.2
     packageName: splitit
     outputDirectory: go
     git:
       userId: konfig-dev
-      repoId: splitit-sdks/go
+      repoId: splitit-web-sdks/go
