--- a/.github/workflows/konfig-lint.yaml
+++ b/.github/workflows/konfig-lint.yaml
@@ -8,7 +8,7 @@ jobs:
   konfig-lint-openapi-spec: # make sure spec passes konfig lint
     runs-on: ubuntu-latest
     env:
-      CLI_VERSION: 0.0.111
+      CLI_VERSION: 1.0.147
     steps:
       - uses: actions/checkout@v3
       - name: Cache node_modules
@@ -23,4 +23,4 @@ jobs:
       - name: Initialize Linting Rules
         run: konfig init -s
       - name: Lint OpenAPI Spec
-        run: konfig lint swagger.json
+        run: konfig lint
