--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "splitit-web-typescript-sdk",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Client for splitit-web-api-v3",
   "author": "Konfig",
   "repository": {
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "rm -rf dist/",
-    "prepare": "npm run build",
+    "prepack": "npm run build",
     "test": "jest"
   },
   "dependencies": {
