--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,17 +3,10 @@
   "files.associations": {
     ".konfigignore": "ignore"
   },
-  "python.testing.pytestArgs": [
-    "python"
-  ],
+  "python.testing.pytestArgs": ["python"],
+  "dotnet-test-explorer.testProjectPath": "**/*.sln",
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "./python",
-    "-p",
-    "test_*.py"
-  ],
+  "python.testing.unittestArgs": ["-v", "-s", "./python", "-p", "test_*.py"],
   "java.compile.nullAnalysis.mode": "automatic"
 }
