--- a/konfig.yaml
+++ b/konfig.yaml
@@ -2,17 +2,11 @@
 
 outputDirectory: /tmp/splitit-web-sdks-out
 specInputPath: swagger.json
-specRemotePath: https://web-api-v3.sandbox.splitit.com/swagger/web-api-v3/swagger.json
+specRemotePath: https://web-api-v3.production.splitit.com/swagger/web-api-v3/swagger.json
 specPath: swagger-fixed.json
 requiredEnvironmentVariables:
   - SPLITIT_CLIENT_ID
   - SPLITIT_CLIENT_SECRET
-fixConfig:
-  update:
-    $.servers.0:
-      url: https://web-api-v3.production.splitit.com
-    $.components.securitySchemes.oauth.flows.clientCredentials:
-      tokenUrl: https://id.production.splitit.com/connect/token
 generators:
   php:
     version: 1.8.0
