pull latest OAS

--- a/.konfig/progress.yaml
+++ b/.konfig/progress.yaml
@@ -22,6 +22,8 @@ securityParameters:
     header: false
   X-Splitit-TestMode:
     header: false
+  X-Splitit-TouchPoint:
+    header: false
   extendedParams:
     query: false
   installmentPlanNumber:
