--- a/konfig.yaml
+++ b/konfig.yaml
@@ -13,10 +13,11 @@ fixConfig:
       url: https://web-api-v3.production.splitit.com
 generators:
   php:
-    version: 2.1.0
+    version: 2.2.0
     outputDirectory: php
     packageName: splitit-web-php-sdk
     invokerPackage: Splitit
+    apiDocumentationAuthenticationPartial: snippets/phpDocAuthPartial.php
     supportPhp7: true
     git:
       userId: konfig-dev
